XQuery/XQueryParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. XQueryParser.java */
    package XQuery;
    public class XQueryParser/*@bgen(jjtree)*/implements XQueryParserTreeConstants, XQueryParserConstants {/*@bgen(jjtree)*/
  protected JJTXQueryParserState jjtree = new JJTXQueryParserState();

  final public AST_Root query() throws ParseException {
                                     /*@bgen(jjtree) Root */
  AST_Root jjtn000 = new AST_Root(this, JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      xQuery();
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                   {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void absolutePath() throws ParseException {
 /*@bgen(jjtree) AP */
    AST_AP jjtn000 = new AST_AP(this, JJTAP);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(DOC);
      jj_consume_token(1);
      filename();
      jj_consume_token(2);
      if (jj_2_1(2)) {
                   AST_DoubleSlash jjtn001 = new AST_DoubleSlash(this, JJTDOUBLESLASH);
                   boolean jjtc001 = true;
                   jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(DOUBLESLASH);
        } finally {
                   if (jjtc001) {
                     jjtree.closeNodeScope(jjtn001, true);
                   }
        }
        relativePath();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SINGLELASH:
         AST_SingleSlash jjtn002 = new AST_SingleSlash(this, JJTSINGLESLASH);
         boolean jjtc002 = true;
         jjtree.openNodeScope(jjtn002);
          try {
            jj_consume_token(SINGLELASH);
          } finally {
         if (jjtc002) {
           jjtree.closeNodeScope(jjtn002, true);
         }
          }
          relativePath();
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void pathFilter() throws ParseException {
                                    /*@bgen(jjtree) PF */
  AST_PF jjtn000 = new AST_PF(this, JJTPF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_3(5)) {
        relativePath();
        if (jj_2_2(2)) {
                            AST_Eq jjtn001 = new AST_Eq(this, JJTEQ);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
          try {
            jj_consume_token(EQ);
          } finally {
                            if (jjtc001) {
                              jjtree.closeNodeScope(jjtn001, true);
                            }
          }
          relativePath();
          pathFilter2();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IS:
                 AST_Is jjtn002 = new AST_Is(this, JJTIS);
                 boolean jjtc002 = true;
                 jjtree.openNodeScope(jjtn002);
            try {
              jj_consume_token(IS);
            } finally {
                 if (jjtc002) {
                   jjtree.closeNodeScope(jjtn002, true);
                 }
            }
            relativePath();
            pathFilter2();
            break;
          default:
            jj_la1[1] = jj_gen;
            pathFilter2();
          }
        }
      } else if (jj_2_4(5)) {
        jj_consume_token(3);
        pathFilter();
        jj_consume_token(4);
        pathFilter2();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
        AST_Not jjtn003 = new AST_Not(this, JJTNOT);
        boolean jjtc003 = true;
        jjtree.openNodeScope(jjtn003);
          try {
            jj_consume_token(NOT);
          } finally {
        if (jjtc003) {
          jjtree.closeNodeScope(jjtn003, true);
        }
          }
          pathFilter();
          pathFilter2();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void pathFilter2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
     AST_And jjtn001 = new AST_And(this, JJTAND);
     boolean jjtc001 = true;
     jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(AND);
      } finally {
     if (jjtc001) {
       jjtree.closeNodeScope(jjtn001, true);
     }
      }
      pathFilter();
      pathFilter2();
      break;
    case OR:
        AST_Or jjtn002 = new AST_Or(this, JJTOR);
        boolean jjtc002 = true;
        jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(OR);
      } finally {
        if (jjtc002) {
          jjtree.closeNodeScope(jjtn002, true);
        }
      }
      pathFilter();
      pathFilter2();
      break;
    default:
      jj_la1[3] = jj_gen;

    }
  }

  final public void relativePath() throws ParseException {
 /*@bgen(jjtree) RP */
    AST_RP jjtn000 = new AST_RP(this, JJTRP);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TAGNAME:
        tagname();
        relativePath2();
        break;
      case STAR:
        AST_Star jjtn001 = new AST_Star(this, JJTSTAR);
        boolean jjtc001 = true;
        jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(STAR);
        } finally {
        if (jjtc001) {
          jjtree.closeNodeScope(jjtn001, true);
        }
        }
        relativePath2();
        break;
      default:
        jj_la1[4] = jj_gen;
        if (jj_2_5(2)) {
                         AST_Dot jjtn002 = new AST_Dot(this, JJTDOT);
                         boolean jjtc002 = true;
                         jjtree.openNodeScope(jjtn002);
          try {
            jj_consume_token(DOT);
          } finally {
                         if (jjtc002) {
                           jjtree.closeNodeScope(jjtn002, true);
                         }
          }
          relativePath2();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DOUBLEDOT:
            AST_DDot jjtn003 = new AST_DDot(this, JJTDDOT);
            boolean jjtc003 = true;
            jjtree.openNodeScope(jjtn003);
            try {
              jj_consume_token(DOUBLEDOT);
            } finally {
            if (jjtc003) {
              jjtree.closeNodeScope(jjtn003, true);
            }
            }
            relativePath2();
            break;
          case TXT:
            AST_Txt jjtn004 = new AST_Txt(this, JJTTXT);
            boolean jjtc004 = true;
            jjtree.openNodeScope(jjtn004);
            try {
              jj_consume_token(TXT);
            } finally {
            if (jjtc004) {
              jjtree.closeNodeScope(jjtn004, true);
            }
            }
            relativePath2();
            break;
          case 3:
            jj_consume_token(3);
            relativePath();
            jj_consume_token(4);
            relativePath2();
            break;
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void relativePath2() throws ParseException {
    if (jj_2_6(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SINGLELASH:
          AST_SingleSlash jjtn001 = new AST_SingleSlash(this, JJTSINGLESLASH);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(SINGLELASH);
        } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
        }
        relativePath();
        relativePath2();
        break;
      case DOUBLESLASH:
            AST_DoubleSlash jjtn002 = new AST_DoubleSlash(this, JJTDOUBLESLASH);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(DOUBLESLASH);
        } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
        }
        relativePath();
        relativePath2();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 5:
        jj_consume_token(5);
        pathFilter();
        jj_consume_token(6);
        relativePath2();
        break;
      default:
        jj_la1[7] = jj_gen;
        if (jj_2_7(3)) {
                     AST_Comma jjtn003 = new AST_Comma(this, JJTCOMMA);
                     boolean jjtc003 = true;
                     jjtree.openNodeScope(jjtn003);
          try {
            jj_consume_token(7);
          } finally {
                     if (jjtc003) {
                       jjtree.closeNodeScope(jjtn003, true);
                     }
          }
          relativePath();
        } else {

        }
      }
    }
  }

  final public void xQuery() throws ParseException {
 /*@bgen(jjtree) XQ */
    AST_XQ jjtn000 = new AST_XQ(this, JJTXQ);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOC:
        absolutePath();
        xQuery2();
        break;
      case 3:
        jj_consume_token(3);
        xQuery();
        jj_consume_token(4);
        xQuery2();
        break;
      case 8:
        jj_consume_token(8);
        tagname();
        jj_consume_token(9);
        jj_consume_token(10);
        xQuery();
        jj_consume_token(11);
        jj_consume_token(12);
        tagname();
        jj_consume_token(9);
        xQuery2();
        break;
      case FOR:
        forClause();
        letClauseWithEmpty();
        whereClause();
        returnClause();
        xQuery2();
        break;
      case LET:
        letClause();
        xQuery();
        xQuery2();
        break;
      case VAR:
        var();
        xQuery2();
        break;
      case STRING:
        string();
        xQuery2();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void xQuery2() throws ParseException {
    if (jj_2_8(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SINGLELASH:
                     AST_SingleSlash jjtn001 = new AST_SingleSlash(this, JJTSINGLESLASH);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(SINGLELASH);
        } finally {
                     if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001, true);
                     }
        }
        relativePath();
        break;
      case DOUBLESLASH:
            AST_DoubleSlash jjtn002 = new AST_DoubleSlash(this, JJTDOUBLESLASH);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(DOUBLESLASH);
        } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
        }
        relativePath();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      xQuery2();
    } else if (jj_2_9(2147483647)) {

    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 7:
        AST_Comma jjtn003 = new AST_Comma(this, JJTCOMMA);
        boolean jjtc003 = true;
        jjtree.openNodeScope(jjtn003);
        try {
          jj_consume_token(7);
        } finally {
        if (jjtc003) {
          jjtree.closeNodeScope(jjtn003, true);
        }
        }
        xQuery();
        break;
      default:
        jj_la1[10] = jj_gen;

      }
    }
  }

  final public void forClause() throws ParseException {
                                     /*@bgen(jjtree) FORCLAUSE */
  AST_FORCLAUSE jjtn000 = new AST_FORCLAUSE(this, JJTFORCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOR);
      var();
      jj_consume_token(IN);
      xQuery();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 7:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_1;
        }
                                  AST_Comma jjtn001 = new AST_Comma(this, JJTCOMMA);
                                  boolean jjtc001 = true;
                                  jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(7);
        } finally {
                                  if (jjtc001) {
                                    jjtree.closeNodeScope(jjtn001, true);
                                  }
        }
        var();
        jj_consume_token(IN);
        xQuery();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void letClause() throws ParseException {
                                         /*@bgen(jjtree) #LETCLAUSE(> 1) */
  AST_LETCLAUSE jjtn000 = new AST_LETCLAUSE(this, JJTLETCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LET);
      var();
      jj_consume_token(ASSIGN);
      xQuery();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 7:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_2;
        }
                                       AST_Comma jjtn001 = new AST_Comma(this, JJTCOMMA);
                                       boolean jjtc001 = true;
                                       jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(7);
        } finally {
                                       if (jjtc001) {
                                         jjtree.closeNodeScope(jjtn001, true);
                                       }
        }
        var();
        jj_consume_token(ASSIGN);
        xQuery();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
      }
    }
  }

  final public void letClauseWithEmpty() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LET:
      letClause();
      break;
    default:
      jj_la1[13] = jj_gen;

    }
  }

  final public void whereClause() throws ParseException {
                                             /*@bgen(jjtree) #WHERECLAUSE(> 0) */
  AST_WHERECLAUSE jjtn000 = new AST_WHERECLAUSE(this, JJTWHERECLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHERE:
        jj_consume_token(WHERE);
        cond();
        break;
      default:
        jj_la1[14] = jj_gen;
        jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 0);
        jjtc000 = false;

      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 0);
      }
    }
  }

  final public void returnClause() throws ParseException {
                                             /*@bgen(jjtree) #RETURNCLAUSE(> 0) */
  AST_RETURNCLAUSE jjtn000 = new AST_RETURNCLAUSE(this, JJTRETURNCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      xQuery();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 0);
      }
    }
  }

  final public void cond() throws ParseException {
                                     /*@bgen(jjtree) COND */
  AST_COND jjtn000 = new AST_COND(this, JJTCOND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EMPTY:
        jj_consume_token(EMPTY);
        jj_consume_token(3);
        xQuery();
        jj_consume_token(4);
        cond2();
        break;
      case SOME:
        jj_consume_token(SOME);
        var();
        jj_consume_token(IN);
        xQuery();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 7:
            ;
            break;
          default:
            jj_la1[15] = jj_gen;
            break label_3;
          }
                AST_Comma jjtn001 = new AST_Comma(this, JJTCOMMA);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
          try {
            jj_consume_token(7);
          } finally {
                if (jjtc001) {
                  jjtree.closeNodeScope(jjtn001, true);
                }
          }
          var();
          jj_consume_token(IN);
          xQuery();
        }
        jj_consume_token(SATISFIES);
        cond();
        cond2();
        break;
      case 3:
      case 8:
      case LET:
      case DOC:
      case FOR:
      case STRING:
      case VAR:
        xQuery();
        if (jj_2_10(2)) {
                           AST_Is jjtn002 = new AST_Is(this, JJTIS);
                           boolean jjtc002 = true;
                           jjtree.openNodeScope(jjtn002);
          try {
            jj_consume_token(IS);
          } finally {
                           if (jjtc002) {
                             jjtree.closeNodeScope(jjtn002, true);
                           }
          }
          xQuery();
          cond2();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EQ:
                AST_Eq jjtn003 = new AST_Eq(this, JJTEQ);
                boolean jjtc003 = true;
                jjtree.openNodeScope(jjtn003);
            try {
              jj_consume_token(EQ);
            } finally {
                if (jjtc003) {
                  jjtree.closeNodeScope(jjtn003, true);
                }
            }
            xQuery();
            cond2();
            break;
          default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void cond2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      cond();
      cond2();
      break;
    case OR:
      jj_consume_token(OR);
      cond();
      cond2();
      break;
    default:
      jj_la1[18] = jj_gen;

    }
  }

  final public void filename() throws ParseException {
 /*@bgen(jjtree) FILENAME */
 AST_FILENAME jjtn000 = new AST_FILENAME(this, JJTFILENAME);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(FILENAME);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.setToken(t.kind,t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void var() throws ParseException {
 /*@bgen(jjtree) VAR */
 AST_VAR jjtn000 = new AST_VAR(this, JJTVAR);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(VAR);
             jjtree.closeNodeScope(jjtn000, true);
             jjtc000 = false;
            jjtn000.setToken(t.kind,t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public String string() throws ParseException {
 /*@bgen(jjtree) STRING */
 AST_STRING jjtn000 = new AST_STRING(this, JJTSTRING);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(STRING);
                jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
               jjtn000.setToken(t.kind,t.image);{if (true) return t.image;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Token tagname() throws ParseException {
 /*@bgen(jjtree) TAGNAME */
 AST_TAGNAME jjtn000 = new AST_TAGNAME(this, JJTTAGNAME);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(TAGNAME);
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
                jjtn000.setToken(t.kind,t.image);{if (true) return t;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }
